attached_assets/Pasted-marceloferreiradearaujo-Marcelos-MacBook-Air-520-mobile_1769340001804.txt
marceloferreiradearaujo@Marcelos-MacBook-Air-520 mobile % npx eas-cli init
Failed to read the app config from the project using "npx expo config" command: npx expo config --json exited with non-zero code: 1.
Falling back to the version of "@expo/config" shipped with the EAS CLI.
Error parsing JSON: {
  "expo": {
    "name": "Image Certifier",
    "slug": "image-certifier",
    "version": "1.0.0",
    "orientation": "portrait",
    "icon": "./assets/icon.png",
    "scheme": "imgcertifier",
    "userInterfaceStyle": "automatic",
    "splash": {
      "image": "./assets/splash.png",
      "resizeMode": "contain",
      "backgroundColor": "#0a0a0f"
    },
    "assetBundlePatterns": [
      "**/*"
    ],
    "ios": {
      "supportsTablet": true,
      "bundleIdentifier": "app.imgcertifier.mobile",
      "buildNumber": "1",
      "infoPlist": {
        "NSCameraUsageDescription": "Image Certifier needs camera access to capture images for AI analysis",
        "NSPhotoLibraryUsageDescription": "Image Certifier needs photo library access to select images for AI analysis",
        "NSPhotoLibraryAddUsageDescription": "Image Certifier needs access to save certified images to your photo library"
      }
    },
    "android": {
      "adaptiveIcon": {
        "foregroundImage": "./assets/adaptive-icon.png",
        "backgroundColor": "#0a0a0f"
      },
      "package": "app.imgcertifier.mobile",
      "versionCode": 1,
      "permissions": [
        "CAMERA",
        "READ_EXTERNAL_STORAGE",
        "WRITE_EXTERNAL_STORAGE"
      ]
    },
    "web": {
      "bundler": "metro",
      "output": "static",
      "favicon": "./assets/favicon.png"
    },
    "plugins": [
      "expo-router",
      "expo-camera",
      "expo-image-picker",
      [
        "@stripe/stripe-react-native",
        {
          "merchantIdentifier": "merchant.app.imgcertifier",
          "enableGooglePay": true
        }
      ]
    ],
    "experiments": {
      "typedRoutes": true
    },
    "extra": {
      "router": {
        "origin": false
      },
      "eas": {
        "projectId": "your-project-id"
    }
  }
}

├─ File: /Users/marceloferreiradearaujo/Documents/mobile/app.json
└─ Cause: SyntaxError: JSON5: invalid end of input at 70:1
  68 |   }
  69 | }
> 70 | 
     | ^
    Error: project:init command failed.
marceloferreiradearaujo@Marcelos-MacBook-Air-520 mobile % 